<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


    <parent>


        <groupId>org.springframework.boot</groupId>


        <artifactId>spring-boot-starter-parent</artifactId>


        <version>2.2.0.RELEASE</version>


        <relativePath/>


    </parent>


    <modelVersion>4.0.0</modelVersion>


    <groupId>org.example</groupId>


    <artifactId>multi_module_app</artifactId>


    <version>1.0-SNAPSHOT</version>


    <packaging>pom</packaging>


    <modules>


        <module>dto</module>


        <module>service</module>


        <module>exception</module>


        <module>controller</module>


        <module>mapper</module>


        <module>domain</module>


        <module>configuration</module>


    </modules>


    <dependencies>


        <dependency>


            <groupId>org.projectlombok</groupId>


            <artifactId>lombok</artifactId>


            <version>1.18.12</version>


        </dependency>


        <dependency>


            <groupId>org.springframework.boot</groupId>


            <artifactId>spring-boot-starter-test</artifactId>

            <scope>test</scope>


        </dependency>

    </dependencies>


    <build>


        <pluginManagement>


            <plugins>


                <plugin>


                    <groupId>org.apache.maven.plugins</groupId>


                    <artifactId>maven-compiler-plugin</artifactId>


                    <version>3.8.0</version>


                    <configuration>


                        <source>14</source>


                        <target>14</target>


                        <compilerArgs>--enable-preview</compilerArgs>


                    </configuration>


                </plugin>


            </plugins>


        </pluginManagement>


    </build>


    <profiles>

        <profile>
            <id>prod</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <activatedProperties>prod</activatedProperties>
            </properties>
        </profile>

        <profile>
            <id>test</id>
            <properties>
                <activatedProperties>test</activatedProperties>
            </properties>
        </profile>
    </profiles>


</project>
